# autocert

./: .gitignore  frames_2026-03-09_07.03.37.gv  generate_iso_cube_json.py  iso_final_results.csv  iso_final_results_2.csv  iso_follow.py  iso_follow_2.py  iso_follow_3ch.py  iso_follow_multi_4ch.py  iso_jt_results.csv  iso_minimal_results.csv  iso_multi_4ch_results.csv  iso_multi_orient_1.py  iso_multi_orient_2.py  iso_multi_pose_with_orientation.csv  iso_multi_pose_with_orientation_fixed.csv  iso_sim_both.py  iso_test_both.py  log.txt  log10.txt  log11.txt  log12.txt  log13.txt  log14.txt  log15.txt  log2.txt  log21.txt  log3.txt  log4.txt  log5.txt  log_20.txt  simple_iso_test.py  test.yaml
configs/: open_manipulator_iso.json  open_manipulator_x_iso.json  open_manipulator_x_iso_cube.json
install/: local_setup.sh  setup.sh
install/autocert_certification/lib/autocert_certification/: certification_node
install/autocert_certification/share/autocert_certification/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/autocert_core/lib/autocert_core/: batch_fk_server
install/autocert_core/share/autocert_core/: README.md  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/autocert_evaluation/lib/autocert_evaluation/: evaluation_node
install/autocert_evaluation/share/autocert_evaluation/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/autocert_examples/share/autocert_examples/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/autocert_experiment/lib/autocert_experiment/: experiment_node
install/autocert_experiment/share/autocert_experiment/: package.bash  package.dsv  package.ps1  (+3 more)
log/: latest_build
results/: RE-RUN_TEST.csv  RE-RUN_TEST_2.csv  RE-RUN_TEST_3.csv  eval_6dof_run_023.json  eval_6dof_run_034.json  eval_run_023.json  eval_run_037.json  eval_run_045.json  eval_run_065.json  eval_run_067.json  eval_run_100.json  eval_run_101.json  final_5dof_certificate.json  final_6dof_certificate.json  final_certificate.json  final_certificate_6dof_2.json  final_noise.json  pose_orie_2.csv  pose_orie_3.csv  pose_orie_4.csv  pose_orie_5dof_1.csv  run_003  sample1.csv  sample2.csv  sample3.csv  sample4.csv  sample5.csv  sample6.csv  sample7.csv  sample_test_1.csv  sample_test_2.csv  sample_test_4.csv  sample_test_5.csv  test.csv  test3.csv  test_5dof.csv  test_final.csv  test_final_success.csv
src/: all.txt  all_files.txt  all_files_content.txt  autocert_content.txt  autocert_content_10.txt  autocert_content_2.txt  autocert_content_3.txt  autocert_content_5.txt  autocert_content_5dof_success.txt  autocert_content_all.txt  autocert_content_all_10.txt  autocert_content_all_2.txt  autocert_content_all_3.txt  autocert_content_all_4.txt  autocert_content_all_5.txt  autocert_content_all_6.txt  autocert_content_connect.txt  autocert_content_success_error.txt  complete_files.txt  selected_files_content.txt  x.txt
src/autocert_bringup/: package.xml  setup.cfg  setup.py
src/autocert_bringup/launch/: full_pipeline.launch.py
src/autocert_certification/: package.xml  setup.cfg  setup.py
src/autocert_certification/autocert_certification/: __init__.py  certificate.py  certification_node.py  hash_utils.py  latex_certificate_generator.py  limits.py  pdf_generator.py  report_generator.py  robot_data_extractor.py
src/autocert_certification/config/: limits.yaml  robot_metadata.yaml
src/autocert_core/: CMakeLists.txt  package.xml
src/autocert_core/config/: README.md
src/autocert_core/include/autocert_core/: collision_checker.hpp  workspace_sampler.hpp
src/autocert_core/src/: batch_fk_server.cpp  collision_checker.cpp  workspace_sampler.cpp
src/autocert_evaluation/: package.xml  setup.cfg  setup.py
src/autocert_evaluation/autocert_evaluation/: __init__.py  data_validator.py  evaluation_node.py  iso9283.py  metrics.py  outlier_detector.py
src/autocert_examples/: CMakeLists.txt  package.xml
src/autocert_examples/config/: README.md
src/autocert_examples/launch/: example_sampling.launch.py
src/autocert_examples/scripts/: run_experiment.py
src/autocert_execution/: package.xml  setup.cfg  setup.py
src/autocert_execution/autocert_execution/: execution_node.py  motion_validator.py
src/autocert_execution/config/: execution_params.yaml
src/autocert_execution/launch/: execution.launch.py
src/autocert_experiment/: package.xml  setup.cfg  setup.py
src/autocert_experiment/autocert_experiment/: __init__.py  config_loader.py  experiment_node.py  measurement_logger.py  pose_generator.py  state_machine.py
src/autocert_experiment/config/: experiment_config.yaml
src/autocert_experiment/launch/: experiment.launch.py
src/autocert_interfaces/: CMakeLists.txt  package.xml
src/autocert_interfaces/action/: MoveToPose.action
src/autocert_interfaces/srv/: BatchFK.srv  CheckCollision.srv  GetExecutionStatus.srv  GetRobotInfo.srv
src/autocert_launch/: CMakeLists.txt  package.xml
src/autocert_launch/config/: default_params.yaml
src/autocert_launch/launch/: example_sampling.launch.py  sampling_pipeline.launch.py
src/autocert_moveit/: package.xml  setup.cfg  setup.py
src/autocert_moveit/autocert_moveit/: moveit_config_builder.py  robot_description_loader.py
src/autocert_moveit/config/: moveit_params.yaml
src/autocert_moveit/launch/: moveit.launch.py
src/autocert_pipeline/: package.xml  setup.cfg  setup.py
src/autocert_pipeline/autocert_pipeline/: __init__.py  config_loader.py  pipeline_node.py  run_manager.py
src/autocert_pipeline/config/: master_config.yaml
src/autocert_pipeline/launch/: pipeline.launch.py
src/autocert_python/: package.xml  setup.cfg  setup.py
src/autocert_python/autocert_python/: __init__.py  client.py  sampling.py  utils.py  visualization.py  workspace_sampler.py
src/autocert_python/scripts/: sample_workspace.py
(+207 files in other folders)
