<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>autocert_python</name>
  <version>0.0.0</version>
  <description>Python research API for AutoCert calibration and workspace analysis</description>
  <maintainer email="kasturigangotri72@gmail.com">Gangotri</maintainer>
  <license>BSD-3-Clause</license>

  <depend>rclpy</depend>
  <depend>autocert_interfaces</depend>
  <depend>python3-numpy</depend>
  <depend>python3-scipy</depend>
  <depend>python3-matplotlib</depend>
  <depend>python3-pandas</depend>
  <depend>python3-sklearn</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
